--- a/RandomPassword/Base.lproj/Main.storyboard
+++ b/RandomPassword/Base.lproj/Main.storyboard
@@ -1,24 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RandomPassword" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainStoryBoardImage" translatesAutoresizingMaskIntoConstraints="NO" id="Cy4-JC-zbx">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1om-Yp-g00">
+                                <rect key="frame" x="67.5" y="431" width="279" height="34"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="9oc-86-QgU"/>
+                                    <constraint firstAttribute="width" constant="279" id="uec-e3-hvw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j47-Md-MLe">
+                                <rect key="frame" x="106.5" y="473" width="201" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="dge-er-zjO"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="201" id="jwn-N9-nzO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Get Password">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="passwordButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="14b-OD-ItM"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="j47-Md-MLe" secondAttribute="bottom" constant="324" id="2Lm-Nk-Hyq"/>
+                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6Yg-Sr-oW9"/>
+                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bse-Iz-LQ6"/>
+                            <constraint firstAttribute="bottom" secondItem="Cy4-JC-zbx" secondAttribute="bottom" id="Gbc-dP-dea"/>
+                            <constraint firstItem="j47-Md-MLe" firstAttribute="top" secondItem="1om-Yp-g00" secondAttribute="bottom" constant="8" id="Hun-Gi-Dc8"/>
+                            <constraint firstItem="j47-Md-MLe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LdD-We-Oqg"/>
+                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="MAW-nj-lUC"/>
+                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ohx-0g-KAV"/>
+                            <constraint firstItem="1om-Yp-g00" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="387" id="Poa-7P-WQG"/>
+                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="b6g-1E-KCy"/>
+                            <constraint firstItem="1om-Yp-g00" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gFE-ri-Fgu"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="passwordTF" destination="1om-Yp-g00" id="YBu-PZ-Zuj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="85.714285714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MainStoryBoardImage" width="341" height="341"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
