--- a/RandomPassword/Base.lproj/LaunchScreen.storyboard
+++ b/RandomPassword/Base.lproj/LaunchScreen.storyboard
@@ -17,19 +17,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenImage" translatesAutoresizingMaskIntoConstraints="NO" id="u51-qK-FPq">
-                                <rect key="frame" x="107" y="348" width="200" height="200"/>
+                                <rect key="frame" x="82" y="323" width="250" height="250"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="dQ9-cW-1D8"/>
-                                    <constraint firstAttribute="height" constant="200" id="mdx-ap-Zrr"/>
+                                    <constraint firstAttribute="height" constant="250" id="kQR-ZC-Pd8"/>
+                                    <constraint firstAttribute="width" constant="250" id="lJt-vC-cVb"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get your Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xez-aa-ERr">
-                                <rect key="frame" x="97.5" y="239" width="219" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="II6-1A-K0L"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="219" id="tsm-sq-YLG"/>
-                                </constraints>
+                                <rect key="frame" x="97.5" y="607" width="219" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -38,11 +34,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="labelColor"/>
                         <constraints>
-                            <constraint firstItem="xez-aa-ERr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="195" id="76K-Q2-wPd"/>
-                            <constraint firstItem="u51-qK-FPq" firstAttribute="top" secondItem="xez-aa-ERr" secondAttribute="bottom" constant="79" id="Nm1-8S-cxd"/>
-                            <constraint firstItem="u51-qK-FPq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cEE-8e-YDr"/>
-                            <constraint firstItem="xez-aa-ERr" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="knY-YW-Oh1"/>
-                            <constraint firstItem="u51-qK-FPq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="uFl-Lh-VbG"/>
+                            <constraint firstItem="u51-qK-FPq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="18j-mW-3Id"/>
+                            <constraint firstItem="xez-aa-ERr" firstAttribute="top" secondItem="u51-qK-FPq" secondAttribute="bottom" constant="34" id="Oj6-iZ-UVA"/>
+                            <constraint firstItem="xez-aa-ERr" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="mbP-Rf-4bK"/>
+                            <constraint firstItem="u51-qK-FPq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tpR-oK-mM3"/>
                         </constraints>
                     </view>
                 </viewController>
