--- a/RandomPassword/Base.lproj/Main.storyboard
+++ b/RandomPassword/Base.lproj/Main.storyboard
@@ -16,27 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainStoryBoardImage" translatesAutoresizingMaskIntoConstraints="NO" id="Cy4-JC-zbx">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainStoryBoardImage" translatesAutoresizingMaskIntoConstraints="NO" id="Cy4-JC-zbx">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="labelColor"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1om-Yp-g00">
-                                <rect key="frame" x="67.5" y="431" width="279" height="34"/>
+                                <rect key="frame" x="82" y="430.5" width="250" height="35"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="9oc-86-QgU"/>
-                                    <constraint firstAttribute="width" constant="279" id="uec-e3-hvw"/>
+                                    <constraint firstAttribute="height" constant="35" id="Hkt-pM-H16"/>
+                                    <constraint firstAttribute="width" constant="250" id="eXK-wn-N3Q"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j47-Md-MLe">
-                                <rect key="frame" x="106.5" y="473" width="201" height="65"/>
+                                <rect key="frame" x="145.5" y="482" width="123" height="30"/>
+                                <color key="backgroundColor" red="0.80692094560000005" green="0.69130229949999999" blue="0.59998971219999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="65" id="dge-er-zjO"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="201" id="jwn-N9-nzO"/>
+                                    <constraint firstAttribute="height" constant="30" id="qBw-pC-Tua"/>
+                                    <constraint firstAttribute="width" constant="123" id="u1E-1j-fAz"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="Get Password">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <state key="normal" title="Create">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
@@ -47,17 +49,14 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="j47-Md-MLe" secondAttribute="bottom" constant="324" id="2Lm-Nk-Hyq"/>
-                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6Yg-Sr-oW9"/>
-                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bse-Iz-LQ6"/>
-                            <constraint firstAttribute="bottom" secondItem="Cy4-JC-zbx" secondAttribute="bottom" id="Gbc-dP-dea"/>
-                            <constraint firstItem="j47-Md-MLe" firstAttribute="top" secondItem="1om-Yp-g00" secondAttribute="bottom" constant="8" id="Hun-Gi-Dc8"/>
-                            <constraint firstItem="j47-Md-MLe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LdD-We-Oqg"/>
-                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="MAW-nj-lUC"/>
-                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ohx-0g-KAV"/>
-                            <constraint firstItem="1om-Yp-g00" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="387" id="Poa-7P-WQG"/>
-                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="b6g-1E-KCy"/>
-                            <constraint firstItem="1om-Yp-g00" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gFE-ri-Fgu"/>
+                            <constraint firstItem="1om-Yp-g00" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1ax-0w-YWG"/>
+                            <constraint firstItem="j47-Md-MLe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4F1-7H-g80"/>
+                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="6v7-Mq-Jrk"/>
+                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="OGL-kf-TUV"/>
+                            <constraint firstItem="1om-Yp-g00" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bNq-sU-gyz"/>
+                            <constraint firstItem="Cy4-JC-zbx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="gwu-pn-OCg"/>
+                            <constraint firstAttribute="bottom" secondItem="Cy4-JC-zbx" secondAttribute="bottom" id="mnN-xo-zCc"/>
+                            <constraint firstItem="j47-Md-MLe" firstAttribute="top" secondItem="1om-Yp-g00" secondAttribute="bottom" constant="16.5" id="pvf-bS-Zdj"/>
                         </constraints>
                     </view>
                     <connections>
@@ -71,6 +70,9 @@
     </scenes>
     <resources>
         <image name="MainStoryBoardImage" width="341" height="341"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
